<resources>
    <string name="app_name">IPTFit</string>
    <string name="picture">Tirar Foto</string>
    <string name="iptfit">IPTFit</string>
    <string name="username">Nome de utilizador</string>
    <string name="password">Password</string>
    <string name="login_button_text">Entrar</string>
    <string name="register_text">Não tem conta? Registar</string>
    <string name="camera_point_text">Aponte a câmara para um código de barras</string>
    <string name="barcode_text">Introduzir Código</string>
    <string name="app_logo">Logo da app</string>
    <string name="stats_text">Estatísticas</string>
    <string name="history_text">Ver Histórico</string>
    <string name="about_text">Sobre a Aplicação</string>
    <string name="logout_text">Terminar Sessão</string>
    <string name="full_name_text">Nome completo</string>
    <string name="email_text">Email</string>
    <string name="username_text">Nome de utilizador</string>
    <string name="password_text">Password</string>
    <string name="confirm_password_text">Confirmar password</string>
    <string name="product_name_text">Nome do Produto</string>
    <string name="brand_text">Marca</string>
    <string name="default_grade">A</string>
    <string name="nutri_score_text">Nutri-Score:</string>
    <string name="nutrictional_info_text">Informação Nutricional (por 100g/ml)</string>
    <string name="energy_text">Energia:</string>
    <string name="protein_text">Proteínas:</string>
    <string name="carbs_text">Hidratos de Carbono:</string>
    <string name="sugar_content_text">dos quais açúcares:</string>
    <string name="fats_text">Gorduras:</string>
    <string name="saturated_fats_text">das quais saturadas:</string>
    <string name="fibers_text">Fibra:</string>
    <string name="salt_text">Sal:</string>
    <string name="notes_text">Notas (opcional)</string>
    <string name="save_text">Guardar Consumo</string>
    <string name="default_text">Nenhum produto registado.\nDigitalize produtos para começar!</string>
    <string name="product_text">Nome do Produto</string>
    <string name="brand_name_text">Marca</string>
    <string name="delete_text">Eliminar</string>
    <string name="about_info">Informação Académica</string>
    <string name="course_info">Licenciatura em Engenharia Informática</string>
    <string name="uc_info">Desenvolvimento de Aplicações Móveis</string>
    <string name="year_info">2025/26</string>
    <string name="school_info">Instituto Politécnico de Tomar</string>
    <string name="creator_info">Autores</string>
    <string name="error_login">Credenciais inválidas</string>
    <string name="error_network">Erro de rede. Verifique a sua ligação.</string>
    <string name="error_unknown">Ocorreu um erro desconhecido</string>
    <string name="success_registered">Registo efetuado com sucesso!</string>
    <string name="success_saved">Produto guardado no histórico!</string>
    <string name="success_deleted">Registo eliminado</string>
    <string name="error_empty_username">Introduza o nome de utilizador</string>
    <string name="error_empty_password">Introduza a password</string>
    <string name="error_short_username">Nome de utilizador deve ter pelo menos 3 caracteres</string>
    <string name="error_short_password">Password deve ter pelo menos 6 caracteres</string>
    <string name="error_invalid_email">Email inválido</string>
    <string name="error_passwords_dont_match">As passwords não coincidem</string>
    <string name="error_username_exists">Nome de utilizador já existe</string>
    <string name="error_email_exists">Email já está registado</string>
    <string name="permission_camera_denied">Permissão da câmara negada</string>
    <string name="permission_camera_required">É necessária permissão da câmara para digitalizar códigos</string>
    <string name="app_info">Sobre a Aplicação</string>
    <string name="app_description">IPTFit é uma aplicação que permite aos utilizadores digitalizar códigos de barras de produtos alimentares e consultar informação nutricional detalhada.\n\nA aplicação guarda um histórico de consumos e permite acompanhar a ingestão calórica diária.\n</string>
    <string name="default_greeting">Olá, Utilizador!</string>
    <string name="default_calories">0 kcal</string>
    <string name="default_products">0</string>
    <string name="digitalize_product">Digitalizar Produto</string>
    <string name="default_code">Código: 1234567890123</string>
    <string name="default_calorie_quantity">0 kcal</string>
    <string name="default_protein_quantity">0 g</string>
    <string name="default_carb_quantity">0 g</string>
    <string name="default_fiber_quantity">0 g</string>
    <string name="default_salt_content">0 g</string>
    <string name="default_date">01/01/2026 12:00</string>
    <string name="scanner_title">Scanner de Códigos</string>
    <string name="product_detail_title">Detalhes do Produto</string>
    <string name="history_title">Histórico de Consumos</string>
    <string name="about_title">Sobre</string>
    <string name="back_button">Voltar</string>
    <string name="profile_image_description">Foto de perfil do usuário</string>
    <string name="change_photo_description">Trocar foto de perfil</string>
    <string name="ano_letivo">Ano Letivo:</string>
    <string name="institui_o">Instituição:</string>
</resources>